[project]
name = "uber-project"
version = "0.1.0"
description = "this project is about predicting the price by ML"
authors = [
    {name = "yuvaraj"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
